--- a/orb.yml
+++ b/orb.yml
@@ -40,12 +40,17 @@ commands:
         description: Specify a analysis step name for this command, if desired
         type: string
         default: Analyze code statically
+      redirecting-output:
+        description: Specify ">/dev/null" if you do not want to display the analysis results on the standard output
+        type: enum
+        enum: ["", ">/dev/null"]
+        default: ""
     steps:
       - steps: << parameters.prepare >>
       - run:
           name: << parameters.step-name >>
           command: |
-              << parameters.command >> << parameters.arguments >> > << parameters.results-path >> || << parameters.ignore-exit-code >>
+              << parameters.command >> << parameters.arguments >> | tee << parameters.results-path >> << parameters.redirecting-output >> || << parameters.ignore-exit-code >>
   calculate:
     description: |
       Calculate the difference between the analysis results
@@ -109,6 +114,11 @@ commands:
         description: Specify the path to save the analysis results if you need to change it
         type: string
         default: "/tmp/analysis-results"
+      redirecting-output:
+        description: Specify ">/dev/null" if you do not want to display the analysis results on the standard output
+        type: enum
+        enum: ["", ">/dev/null"]
+        default: ""
     steps:
       - checkout
       - compare-url/reconstruct:
@@ -126,6 +136,7 @@ commands:
           arguments: << parameters.analysis-arguments >>
           prepare: []
           results-path: << parameters.analysis-results-path >>/<< parameters.analysis-name >>/HEAD-analysis-results.xml
+          redirecting-output: << parameters.redirecting-output >>
       - compare-url/use:
           custom-logic: git checkout $(cat BASE_COMPARE_COMMIT.txt)
       - analyze:
@@ -134,6 +145,7 @@ commands:
           arguments: << parameters.analysis-arguments >>
           prepare: []
           results-path: << parameters.analysis-results-path >>/<< parameters.analysis-name >>/BASE-analysis-results.xml
+          redirecting-output: << parameters.redirecting-output >>
       - calculate:
           options: << parameters.calculate-options >>
           first-results-path: << parameters.analysis-results-path >>/<< parameters.analysis-name >>/HEAD-analysis-results.xml
@@ -176,6 +188,11 @@ jobs:
         description: Specify the path to save the analysis results if you need to change it
         type: string
         default: "/tmp/analysis-results"
+      redirecting-output:
+        description: Specify ">/dev/null" if you do not want to display the analysis results on the standard output
+        type: enum
+        enum: ["", ">/dev/null"]
+        default: ""
     executor: << parameters.executor >>
     steps:
       - execute:
@@ -186,6 +203,7 @@ jobs:
           calculate-options: << parameters.calculate-options >>
           test-results-path: << parameters.test-results-path >>
           analysis-results-path: << parameters.analysis-results-path >>
+          redirecting-output: << parameters.redirecting-output >>
 
 examples:
   dscar-brakeman:
