--- a/orb.yml
+++ b/orb.yml
@@ -371,7 +371,7 @@ jobs:
     description: Analyze code statically
     parameters:
       executor:
-        description: Specify the image used to execute Analysis
+        description: Specify the image used to execute analysis
         type: executor
         default: default
       is-target-branch-base:
@@ -411,7 +411,7 @@ jobs:
       [1]: https://www.npmjs.com/package/junit-reports-combiner
     parameters:
       executor:
-        description: Specify the image used to execute Analysis
+        description: Specify the image used to execute analysis
         type: executor
         default: default
       analysis-name:
@@ -444,7 +444,7 @@ jobs:
     description: Calculate the difference of static code analysis results between HEAD branch and BASE branch
     parameters:
       executor:
-        description: Specify the image used to execute Analysis
+        description: Specify the image used to execute analysis
         type: executor
         default: default
       analysis-name:
