--- a/orb.yml
+++ b/orb.yml
@@ -17,8 +17,13 @@ executors:
         description: Specify the image used to execute the analysis
         type: string
         default: circleci/node
+      resource_class:
+        description: Amount of CPU and RAM allocated to each container in a job.
+        type: string
+        default: small
     docker:
       - image: << parameters.docker-image >>
+    resource_class: << parameters.resource_class >>
 
 commands:
   checkout-analysis-target:
