--- a/orb.yml
+++ b/orb.yml
@@ -37,6 +37,14 @@ commands:
         description: Check-out the BASE branch if true is specified
         type: boolean
         default: false
+      has-reconstructed:
+        description: Specify true if `compare-url/reconstruct` has not been executed yet
+        type: boolean
+        default: false
+      attach-compare-url-workspace:
+        description: "Attach a workspace for this command to use? Useful when `compare-url` orb's `reconstruct` job is called upstream in a given workflow"
+        type: boolean
+        default: false
     steps:
       - when:
           condition: << parameters.path >>
@@ -50,19 +58,24 @@ commands:
       - when:
           condition: << parameters.is-target-branch-base >>
           steps:
-            - when:
-                condition: << parameters.path >>
-                steps:
-                  - compare-url/reconstruct:
-                      debug: true
-                      project-path: << parameters.path >>
             - unless:
-                condition: << parameters.path >>
+                condition: << parameters.has-reconstructed >> 
                 steps:
-                  - compare-url/reconstruct:
-                      debug: true
-                      project-path: '`eval echo $CIRCLE_WORKING_DIRECTORY`'
+                  - when:
+                      condition: << parameters.path >>
+                      steps:
+                        - compare-url/reconstruct:
+                            debug: true
+                            project-path: << parameters.path >>
+                  - unless:
+                      condition: << parameters.path >>
+                      steps:
+                        - compare-url/reconstruct:
+                            debug: true
+                            project-path: '`eval echo $CIRCLE_WORKING_DIRECTORY`'
             - compare-url/use:
+                attach-workspace: << parameters.attach-compare-url-workspace >>
+                workspace-root: << parameters.path >>
                 step-name: Checkout BASE code
                 custom-logic: set +e; git checkout $(cat BASE_COMPARE_COMMIT.txt) || git checkout HEAD^
   set-analysis-result-path:
@@ -383,6 +396,14 @@ jobs:
         description: Check-out the BASE branch if true is specified
         type: boolean
         default: false
+      has-reconstructed:
+        description: Specify true if `compare-url/reconstruct` has not been executed yet
+        type: boolean
+        default: false
+      attach-compare-url-workspace:
+        description: "Attach a workspace for this command to use? Useful when `compare-url` orb's `reconstruct` job is called upstream in a given workflow"
+        type: boolean
+        default: false
       analysis-name:
         description: Analysis name
         type: string
@@ -404,6 +425,8 @@ jobs:
           is-target-branch-base: << parameters.is-target-branch-base >>
       - checkout-analysis-target:
           is-target-branch-base: << parameters.is-target-branch-base >>
+          has-reconstructed: << parameters.has-reconstructed >>
+          attach-compare-url-workspace: << parameters.attach-compare-url-workspace >>
       - steps: << parameters.analyze >>
       - store_test_results:
           path: << parameters.analysis-results-path >>
