--- a/orb.yml
+++ b/orb.yml
@@ -337,6 +337,14 @@ commands:
   execute:
     description: alculate the difference of static code analysis results between HEAD branch and BASE branch
     parameters:
+      has-reconstructed:
+        description: Specify true if `compare-url/reconstruct` has not been executed yet
+        type: boolean
+        default: false
+      attach-compare-url-workspace:
+        description: "Attach a workspace for this command to use? Useful when `compare-url` orb's `reconstruct` job is called upstream in a given workflow"
+        type: boolean
+        default: false
       analyze:
         description: Specify analysis steps
         type: steps
@@ -364,20 +372,25 @@ commands:
         type: string
         default: ""
     steps:
+      # steps to analyze HEAD
       - checkout-analysis-target:
           path: << parameters.project-path >>
       - set-analysis-result-path:
           analysis-name: << parameters.analysis-name >>
           analysis-results-path: << parameters.analysis-results-path >>
       - steps: << parameters.analyze >>
+      # steps analyze BASE
       - checkout-analysis-target:
           path: << parameters.project-path >>
           is-target-branch-base: true
+          has-reconstructed: << parameters.has-reconstructed >>
+          attach-compare-url-workspace: << parameters.attach-compare-url-workspace >>
       - set-analysis-result-path:
           analysis-name: << parameters.analysis-name >>
           analysis-results-path: << parameters.analysis-results-path >>
           is-target-branch-base: true
       - steps: << parameters.analyze >>
+      # steps to calculate the difference
       - set-result-paths:
           analysis-name: << parameters.analysis-name >>
           analysis-results-path: << parameters.analysis-results-path >>
@@ -475,6 +488,14 @@ jobs:
         description: Specify the image used to execute analysis
         type: executor
         default: default
+      has-reconstructed:
+        description: Specify true if `compare-url/reconstruct` has not been executed yet
+        type: boolean
+        default: false
+      attach-compare-url-workspace:
+        description: "Attach a workspace for this command to use? Useful when `compare-url` orb's `reconstruct` job is called upstream in a given workflow"
+        type: boolean
+        default: false
       analysis-name:
         description: Analysis name
         type: string
@@ -504,10 +525,12 @@ jobs:
     executor: << parameters.executor >>
     steps:
       - execute:
+          has-reconstructed: << parameters.has-reconstructed >>
+          attach-compare-url-workspace: << parameters.attach-compare-url-workspace >>
           analysis-name: << parameters.analysis-name >>
           analyze: << parameters.analyze >>
-          calculate: << parameters.calculate >>
           analysis-results-path: << parameters.analysis-results-path >>
+          calculate: << parameters.calculate >>
           test-results-path: << parameters.test-results-path >>
       - store_test_results:
           path: << parameters.test-results-path >>
